fixed slider visibility problem

--- a/wed/src/styles/components/_main.scss
+++ b/wed/src/styles/components/_main.scss
@@ -3,10 +3,10 @@
 }
 .container{
     font-family: Montserrat;
-    width: 1440px;
+    width: 100%;
     padding-left: 72px;
     padding-right: 72px;
-    max-width: 100%;
+    max-width: 1440px;
     margin: 0 auto;
 }
 .nav{
@@ -41,6 +41,7 @@
     &__wrap{
         display: flex;
         align-items: center;
+        z-index: 10;
         &_toggle{
             position: absolute;
             top: 0;
@@ -115,6 +116,7 @@
     display: none;
     margin-bottom: -4px;
     position: relative;
+    z-index: 11;
     &__item{
         display: block;
         width: 32px;
